overflow-x  problem solved

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,6 @@
 }
 
 body {
-  width: 100vw;
   margin: 0;
   font-family: "Open Sans", sans-serif;
   #root {
