--- a/src/styles/Credentials.scss
+++ b/src/styles/Credentials.scss
@@ -1,8 +1,11 @@
 .credentials {
-  padding: 30px 0;
+  @include flex-row-centered;
+  width: 100%;
+  min-height: calc(100vh - 145px);
   display: flex;
   flex-direction: column;
   gap: 10px;
+
   h2 {
     margin: 0;
   }
@@ -12,6 +15,10 @@
     margin: 0;
   }
   .selecting-div {
+    @include flex-row-centered;
+    width: 100%;
+    max-width: 700px;
+    height: 450px;
     background-color: white;
     padding: 30px;
     display: flex;
